adding some changes to html and js files

--- a/index.html
+++ b/index.html
@@ -47,23 +47,73 @@
     <h2 id="about" class="text-center">About</h2>
     <div class="grid grid-cols-12"> 
         <div class="col-span-6 col-start-1 m-10 rounded-xl p-6 bg-gradient-to-r from-blue-400/80 to-blue-500/80 shadow-md border border-cyan-500 shadow-lg border border-cyan-300/50 hover:scale-102 transition-transform duration-300">
-            <p class="text-center">
-            Skills, qualifications
-            </p>
+            <h2 class="text-center">
+            Skills and qualifications
+            </h2>
+            <section class="grid grid-cols-6">
+            <div class="col-span-3 col-start-1 m-2 mt-4 border-r border-white/50">
+                  <ul class="list-disc list-inside">
+                     <li>HTML & CSS</li>
+                      <li>JavaScript (core concepts)</li>
+                     <li>React</li>
+                     <li>APIs (fetching & integration)</li>
+                     <li>Postman (API testing)</li>
+                 </ul>
+            </div>
+            <div class="col-span-3 col-start-4 m-2">
+                <ul class="list-disc list-inside">
+                    <li>UI & UX principles</li>
+                    <li>Graphic Design Diploma</li>
+                    <li>Colour theory & composition</li>
+                    <li>Typography & layout design</li>
+                </ul>
+            </div>
+            </section>
+            <h2 class="text-center mt-3">Other Qualifications</h2>
+            <ul class="md:ml-30 mt-3">
+                <li>BA (1.1) Cultural Management</li>
+                <li>MA (2.1) Psychology </li>
+            </ul>
         </div>
         <div class="col-span-6 col-start-7 m-10 rounded-xl p-6 bg-gradient-to-r from-blue-500/80 to-indigo-600/80 shadow-md border border-cyan-500 shadow-lg border border-cyan-300/50 hover:scale-102 transition-transform duration-300">
-            <p class="text-center">
-            Soft skills
-            </p>
+           <p class="text-center font-semibold mb-4">Transferable Skills</p>
+    <ul class="list-disc list-inside columns-2 gap-4 mt-10 ml-3">
+        <li>Teamwork & collaboration</li>
+        <li>Creativity</li>
+        <li>Adaptability</li>
+        <li>Problem solving</li>
+        <li>Microsoft Office</li>
+        <li>Communication</li>
+        <li>Time management</li>
+        <li>Attention to detail</li>
+        <li>Initiative</li>
+        <li>Customer service</li>
+        <li>Artist (digital & traditional)</li>
+    </ul>
+</div>
         </div>
     </div>
 
-    <h2 id="projects" class="text-center">Projects</h2>
-    <div class="grid-cols-12 m-10 rounded-xl p-6 bg-gradient-to-r from-blue-400/80 to-indigo-600/80 shadow-md border border-cyan-500 shadow-lg border border-cyan-300/50 hover:scale-102 transition-transform duration-300">
-        <p>
-            Projects
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+    <h2 class="text-center">Projects</h2>
+    <div class="grid grid-cols-12 m-10 rounded-xl p-6 bg-gradient-to-r from-blue-400/80 to-indigo-600/80 shadow-md border border-cyan-500 shadow-lg border border-cyan-300/50 hover:scale-102 transition-transform duration-300">
+        <section id="projectCard" class="col-span-3 col-start-1">
+            <div class="p-4 border border-white/50 rounded-xl shadow-md bg-white/10 text-white">
+                <h3 class="text-xl font-bold mb-2 text-center">Project Title</h3>
+            </div>
+        </section>
+        <section class="project-info col-span-8 col-start-5">
+            <ul>
+                <li>
+                    <p id="projectDescription">Description</p>
+                </li>
+                <li>
+                    <p id="projectTechUsed">Tech Used</p>
+                </li>
+                <li>
+                    <p id="projectIcon">github</p>
+                </li>
+            </ul>
+        </section>
     </div>
 
     <h2 id="contact" class="text-center">Contact</h2>
